# mcp-template-rs

./: .env.auth.example  .gitignore  AGENTS.md  AUTHENTICATION.md  AUTHENTICATION_ADVANCED.md  COMPILER_FIXES.txt  Cargo.toml  README.md  auth_config.toml.example  cargo-generate.toml  config.toml.example  license.txt  oauth_config.toml.example  stdio_config.toml.example  streaming_config.toml.example
deploy/: Dockerfile  README.md  docker-compose.yml
src/: config.rs  error.rs  lib.rs  main.rs  state.rs  telemetry.rs
src/auth/: apikey.rs  mod.rs  redis.rs
src/tools/: auth_example.rs  dice_example.rs  http_client_example.rs  mod.rs  session_example.rs
tests/: integration_test.rs
