[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
# MCP SDK - use git version for streamable HTTP server
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", features = ["server", "macros", "transport-io", "transport-streamable-http-server", "transport-worker"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP server for streaming transport
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
hyper = "1.0"
hyper-util = { version = "0.1", features = ["tokio"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
bytes = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.13"
dotenvy = "0.15"

# Logging and telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Optional dependencies based on features
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
aws-sdk-s3 = { version = "1.0", optional = true }
rand = "0.9.1"

[features]
default = []
database = ["sqlx"]
http-client = ["reqwest"]
aws = ["aws-sdk-s3"]

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
tempfile = "3"

[[bin]]
name = "{{project-name}}"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
